# stargazer

./: .gitignore  CMakeLists.txt  package.xml
example/: demo.cpp
include/stargazer/: CeresLocalizer.h  CoordinateTransformations.h  DebugVisualizer.h  LandmarkCalibrator.h  LandmarkFinder.h  Localizer.h  StargazerConfig.h  StargazerImgTypes.h  StargazerTypes.h
include/stargazer/internal/: CostFunction.h
res/: cam.yaml  map.yaml
src/: CeresLocalizer.cpp  DebugVisualizer.cpp  LandmarkCalibrator.cpp  LandmarkFinder.cpp
test/: test_ConfigHandler.cpp  test_landmark.cpp
test/res/: cam.yaml  map.yaml
