<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stargazer</name>
  <version>1.0.0</version>
  <description>A landmark-based visual indoor localization system for mobile robots</description>

  <maintainer email="wirges@fzi.de">Sascha Wirges</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/KIT-MRT/stargazer.git</url>
  <author email="claudio.bandera@kit.edu">Claudio Bandera</author>
  <author email="wechtc@gmail.com">Christopher Wecht</author>

  <depend>boost</depend>
  <depend>libceres-dev</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
